[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Andrzej Bistram <andrzej.bistram@htdevelopers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
dask = {extras = ["array", "distributed"], version = "^2023.12.0"}
pandas = "^2.1.3"
prettytable = "^3.9.0"
colorama = "^0.4.6"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
